[package]
name = "webf_api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Provide DOM and Web API for Rust code running in WebF"
repository = "https://github.com/openwebf/rs_api.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
